--- a/app/views/main/index.html.erb
+++ b/app/views/main/index.html.erb
@@ -1,3 +1,3 @@
-<div class='d-flex align-items-center justify-content-center'>
-  <h1>Welcome to scheduled tweets</h1>
+<div>
+  <h1 style='text-align: center;'>Welcome to scheduled tweets</h1>
 </div>
