--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,12 +1,12 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <div class="container-fluid">
+  <div class="container-fluid container">
     <%= link_to "Navbar", root_path, class: 'navbar-brand' %>
     <!--<a class="navbar-brand" href="#">Navbar</a>-->
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
+      <ul class="navbar-nav me-auto mb-2 mb-md-0">
         <li class="nav-item">
           <%= link_to "Home", root_path, class: 'nav-link' %>
           <!--<a class="nav-link active" aria-current="page" href="/">Home</a>-->
@@ -15,6 +15,23 @@
           <%= link_to "About", about_path, class: 'nav-link' %>
           <!--<a class="nav-link" href="/about">About</a>-->
         </li>
+      </ul>
+      <ul class="navbar-nav ms-auto mb-2 mb-lg-0 d-flex align-items-center">
+        <% if Current.user %>
+          <li class="nav-item">
+            <%= link_to Current.user.email, edit_password_path, class: 'link-primary',style: 'display: inline-block; margin-right: 1rem;'  %>
+          </li>
+          <li class="nav-item">
+            <%= button_to "Logout", logout_path, method: :delete, class: 'btn btn-dark' %>
+          </li>
+        <% else %>
+          <li class="nav-item">
+            <%= link_to "Sing UP", sign_up_path, class: 'nav-link' %>
+          </li>
+          <li class="nav-item">
+            <%= link_to "Login", sign_in_path, class: 'nav-link' %>
+          </li>
+        <% end %>
       </ul>
     </div>
   </div>
